package com.itproger;

public class InfoBook {

    public static class AmphibianInfo {
        public static void printInfo() {
            System.out.println("Amphibians live in moist environments and have permeable skin.");
        }
    }
}
